--- a/css/styles.css
+++ b/css/styles.css
@@ -201,6 +201,10 @@ footer {
   border: 2px solid #333333;
   position: relative;
 }
+.btn--pageChange:hover::after {
+  top: 0;
+  left: 0;
+}
 .btn--pageChange::after {
   content: "";
   display: block;
@@ -211,6 +215,7 @@ footer {
   height: 100%;
   top: 8px;
   left: 8px;
+  transition: all 0.4s;
 }
 
 .thum {
@@ -783,10 +788,6 @@ body.active {
 /* -------------------------------------------- */
 /* contact */
 /* -------------------------------------------- */
-.contact-top {
-  background-color: #fff;
-}
-
 @media (min-width: 768px) {
   .contact-top {
     text-align: center;
