--- a/css/styles.scss
+++ b/css/styles.scss
@@ -228,6 +228,11 @@ footer {
     width: 200px;
     border: 2px solid #333333;
     position: relative;
+    &:hover::after {
+      top: 0;
+      left: 0;
+    }
+  
 
     &::after{
       content:"";
@@ -239,7 +244,7 @@ footer {
       height: 100%;
       top: 8px;
       left: 8px;
-      // transition: .4s;
+      transition: all .4s;
     }
   }
 }
@@ -848,8 +853,6 @@ body.active{
 .about-body{
 
   &__wrapper{
-    // width: 100%;
-    // border: 1px solid #000;
     background-color: #F7F7F7;
     padding: 60px 20px;
     margin-left: calc(50% - 50vw);
@@ -931,9 +934,7 @@ body.active{
 /* contact */
 /* -------------------------------------------- */
 .contact-top{
-  background-color: #fff;
-  // position: relative;
-  // z-index: -2;
+
 }
 
 @media (min-width: 768px){
@@ -966,12 +967,6 @@ body.active{
 
 }
 
-
-
-
-
-
-
 /* -------------------------------------------- */
 /* works(アーカイブ) */
 /* -------------------------------------------- */
@@ -999,7 +994,6 @@ body.active{
     width: 100%;
     display: flex;
     flex-direction: column-reverse;
-    // border: 1px solid #000;
     text-align: center;
     
     &:not(:first-child){
@@ -1026,6 +1020,7 @@ body.active{
 
 @media (min-width: 768px){
   .works{
+
     &__item{
       width: 48%;
     }
