--- a/css/styles.css
+++ b/css/styles.css
@@ -299,9 +299,10 @@ footer {
   width: 100%;
   z-index: 1;
   color: #fff;
+  background-color: rgb(0, 0, 0);
 }
 .header.fadein {
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(38, 47, 87, 0.5);
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.16);
   position: fixed;
   top: 0;
@@ -457,9 +458,11 @@ body.active {
 /* -------------------------------------------- */
 .mv {
   background-color: #000;
-  height: 100vh;
+  height: 600px;
   display: flex;
   align-items: center;
+  position: relative;
+  padding: 100px 0;
 }
 .mv::before {
   content: "";
@@ -470,21 +473,115 @@ body.active {
   position: absolute;
   top: 0;
   left: 0;
-  -webkit-clip-path: polygon(0 0, 35% 0, 50% 100%, 0% 100%);
-          clip-path: polygon(0 0, 35% 0, 50% 100%, 0% 100%);
+  z-index: 2;
+  -webkit-clip-path: polygon(0 0, 40% 0, 60% 100%, 0% 100%);
+          clip-path: polygon(0 0, 40% 0, 60% 100%, 0% 100%);
 }
-
 .site-title {
   color: #fff;
   letter-spacing: 0.15em;
   font-size: 2.0625rem;
+  z-index: 3;
 }
 
 .color--yellow {
   color: #FFD54D;
 }
 
+.flex {
+  display: flex;
+  justify-content: space-between;
+}
+
+/* スクロール */
+.scrolldown {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+}
+
+.scrolldown span {
+  position: absolute;
+  left: 10px;
+  bottom: 10px;
+  color: #eee;
+  font-size: 0.7rem;
+  letter-spacing: 0.05em;
+  writing-mode: vertical-rl;
+}
+
+.scrolldown:before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: -4px;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background: #FFD54D;
+  -webkit-animation: circlemove 1.6s ease-in-out infinite, cirlemovehide 1.6s ease-out infinite;
+          animation: circlemove 1.6s ease-in-out infinite, cirlemovehide 1.6s ease-out infinite;
+}
+
+@-webkit-keyframes circlemove {
+  0% {
+    bottom: 45px;
+  }
+  100% {
+    bottom: -5px;
+  }
+}
+
+@keyframes circlemove {
+  0% {
+    bottom: 45px;
+  }
+  100% {
+    bottom: -5px;
+  }
+}
+@-webkit-keyframes cirlemovehide {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 0.9;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes cirlemovehide {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 0.9;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+.scrolldown:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 2px;
+  height: 50px;
+  background: #eee;
+}
+
 @media (min-width: 768px) {
+  .mv {
+    height: 700px;
+  }
   .site-title {
     font-size: 5rem;
   }
