--- a/css/styles.css
+++ b/css/styles.css
@@ -297,9 +297,8 @@ footer {
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 1;
+  z-index: 2;
   color: #fff;
-  background-color: rgb(0, 0, 0);
 }
 .header.fadein {
   background-color: rgba(38, 47, 87, 0.5);
@@ -457,12 +456,11 @@ body.active {
 /* mv */
 /* -------------------------------------------- */
 .mv {
-  background-color: #000;
-  height: 600px;
+  background: url(../images/huvest-top-image.png) center left/cover no-repeat;
+  height: 100vh;
   display: flex;
   align-items: center;
   position: relative;
-  padding: 100px 0;
 }
 .mv::before {
   content: "";
@@ -477,11 +475,25 @@ body.active {
   -webkit-clip-path: polygon(0 0, 40% 0, 60% 100%, 0% 100%);
           clip-path: polygon(0 0, 40% 0, 60% 100%, 0% 100%);
 }
+.mv::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 1;
+}
+
 .site-title {
   color: #fff;
   letter-spacing: 0.15em;
   font-size: 2.0625rem;
-  z-index: 3;
+  z-index: 2;
+  padding: 270px 0 140px;
+  position: relative;
 }
 
 .color--yellow {
@@ -498,6 +510,7 @@ body.active {
   position: absolute;
   bottom: 10px;
   left: 50%;
+  z-index: 2;
 }
 
 .scrolldown span {
@@ -579,11 +592,9 @@ body.active {
 }
 
 @media (min-width: 768px) {
-  .mv {
-    height: 700px;
-  }
   .site-title {
     font-size: 5rem;
+    padding-top: 300px;
   }
 }
 /* -------------------------------------------- */
