--- a/css/styles.scss
+++ b/css/styles.scss
@@ -17,6 +17,7 @@ $mainColor: #3f4c88;
 $mainColor: #262f57;
 // $mainColor: #2e795c;
 // $mainColor: #842f3f;
+$subcolor: #CED7DB;
 
 /* -------------------------------------------- */
 /* リセット*/
@@ -99,6 +100,8 @@ footer {
   &::before{
     content: "";
     background: linear-gradient(to bottom, #C2E9FB, #A1C4FD);
+    // background: linear-gradient(to bottom, $mainColor, $backgroundColor);
+
     width: 100%;
     height: 100px;
     display: block;
@@ -260,6 +263,8 @@ footer {
       transition: all .4s;
     }
   }
+
+  
 }
 
 .thum{
@@ -512,7 +517,8 @@ body.active{
 /* -------------------------------------------- */
 .mv{
   background: url(../images/huvest-top-image.png) center left/ cover no-repeat;
-  height: 100vh;
+  // height: 100vh;
+  height: calc(100vh - 70px);
   display: flex;
   align-items: center;
   position: relative;
@@ -559,7 +565,7 @@ body.active{
 /* スクロール */
 .scrolldown{
   position:absolute;
-  bottom: 80px;
+  bottom: 0px;
   left:50%;
   z-index: 1;
 }
@@ -614,16 +620,11 @@ body.active{
 
 @media (min-width: 768px){
   .mv{
-
+    height: calc(100vh - 100px);
   }
   .site-title{
     font-size: rem(80);
     padding-top: 240px;
-  }
-
-  /* スクロール */
-  .scrolldown{
-    bottom:140px;
   }
 }
 
@@ -733,10 +734,10 @@ body.active{
     text-align: center;
 
     &--odd{
-      background-color: #EFEFEF;
+      background-color: #f7f7f7;
     }
     &--even{
-      background-color: #DFDFDF;
+      background-color: #fbfbfb;
     }
   }
 
@@ -928,12 +929,12 @@ body.active{
 }
 
 .about-image{
-
   &__wrapper{
     background-color: #000;
     padding: 30px 0 20px;
     margin-left: calc(50% - 50vw);
     margin-right: calc(50% - 50vw);
+    z-index: 2;
   }
 
   &__image{
@@ -986,10 +987,10 @@ body.active{
 .about-body{
 
   &__wrapper{
-    background-color: #F7F7F7;
     padding: 60px 20px;
     margin-left: calc(50% - 50vw);
     margin-right: calc(50% - 50vw);
+    z-index: 1;
   }
 
   &__title{
@@ -1051,6 +1052,7 @@ body.active{
       padding: 80px 60px 80px 80px;
       margin-left: initial;
       margin-right: initial;
+      background-color: #F7F7F7;
     }
   
     &__title{
