--- a/css/styles.scss
+++ b/css/styles.scss
@@ -109,7 +109,7 @@ footer {
   &__bg{
     background-color: #000;
     color: #fff;
-    padding: 80px 0 155px;
+    padding: 80px 0 100px;
     margin-bottom: 0;
   }
 
@@ -134,10 +134,11 @@ footer {
   
   &.--daikei{
     background-color: $backgroundColor;
-    padding: 1.25em 0;
+    // padding: 1.25em 0;
+    padding: 16px 0;
     max-width: 480px;
     width: 70%;
-    margin: -88px auto 0;
+    margin: -65px auto 0;
     clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
   }
 }
@@ -171,6 +172,7 @@ footer {
 
     &.--daikei{
       margin: -128px auto 0;
+      padding: 40px 0;
     }
   }
 }
