--- a/css/styles.css
+++ b/css/styles.css
@@ -181,16 +181,22 @@ footer {
   width: 200px;
   border-radius: 4px;
   background-color: #fff;
+  transition: all 0.6s;
+  position: relative;
 }
 .btn--more::after {
-  content: "";
+  content: "\f0da";
+  font-weight: 900;
+  font-family: "Font Awesome 5 Free";
   display: inline-block;
-  border-top: 2px solid #000;
-  border-right: 2px solid #000;
-  transform: rotate(45deg);
-  width: 6px;
-  height: 6px;
+  line-height: 1;
   margin-left: 8px;
+}
+.btn--more:hover {
+  background-color: #262f57;
+  color: #fff;
+  border-top: 2px solid #fff;
+  border-right: 2px solid #fff;
 }
 .btn--pageChange {
   font-weight: bold;
