--- a/css/styles.scss
+++ b/css/styles.scss
@@ -220,6 +220,7 @@ footer {
       display: inline-block;
       line-height: 1;
       margin-left: 8px;
+      font-size: rem(16);
     }
 
     &:hover{
